--- a/frontend-task/package.json
+++ b/frontend-task/package.json
@@ -11,10 +11,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.8",
     "cors": "^2.8.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.1",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
